--- a/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
+++ b/Hospital.WPF/Controls/Ambulatory/AmbDiagnostic.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Hospital.WPF.Controls.Ambulatory"
              xmlns:vm="clr-namespace:Hospital.ViewModel;assembly=Hospital.ViewModel"
@@ -10,9 +11,57 @@
     <UserControl.DataContext> <vm:AmbulatoryViewModel/> </UserControl.DataContext>
     
     <Grid>
-        <Expander Header="Физикальная диагноска" IsExpanded="True">
-            <DataGrid ItemsSource="{Binding TestData}"/>
+        <StackPanel Orientation="Vertical">
+            <Expander Header="Физикальная диагноска" IsExpanded="True">
+                <DataGrid ItemsSource="{Binding PhysicalTestData}"/>
+            </Expander>
+            <Expander Header="Лабараторная диагностика" IsExpanded="True">
+                
+                <DataGrid ItemsSource="{Binding LabTestData}" AutoGenerateColumns="False">
+                    
+                    <DataGrid.GroupStyle>
+                        <GroupStyle>
+                            <GroupStyle.ContainerStyle>
+                                <Style TargetType="{x:Type GroupItem}">
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type GroupItem}">
+                                                <Expander IsEnabled="True">
+                                                    <Expander.Header>
+                                                        <TextBlock Text="{Binding Path=Id}"/>
+                                                    </Expander.Header>
+                                                    <Expander.Content>
+                                                        <ItemsPresenter/>
+                                                    </Expander.Content>
+                                                </Expander>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </GroupStyle.ContainerStyle>
+                        </GroupStyle>
+                    </DataGrid.GroupStyle>
+                    
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+                        <DataGridTextColumn Header="КОД" Binding="{Binding Test.Id}"/>
+                        <DataGridTextColumn Header="Type" Binding="{Binding Test.TestType.Title}"/>
+                        <DataGridTextColumn Header="НАЗВАНИЕ" Binding="{Binding Test.ShortTitle}"/>
+                        <DataGridTextColumn Header="ОПЦИЯ" Binding="{Binding Option}"/>
+                        <DataGridTextColumn Header="РЕЗУЛЬТАТ" Binding="{Binding Value}"/>
+                        <DataGridTextColumn Header="НОМРА" Binding="{Binding Test.NormalValues}"/>
+                        <DataGridCheckBoxColumn Header="СИМПТОМ"  Binding="{Binding IsSymptom}"/>
+                        <DataGridTextColumn Header="ДАТА" Binding="{Binding DateResult, StringFormat=dd.MM.yy HH:mm}"/>
+                    </DataGrid.Columns>
+                </DataGrid>
+                
+            </Expander>
+            <Expander Header="Инструментальная диагностика" IsExpanded="True">
+                <DataGrid ItemsSource="{Binding ToolTestData}"/>
+            </Expander>
 
-        </Expander>
+        </StackPanel>
+        
+        
     </Grid>
 </UserControl>
