--- a/Hospital.WPF/Views/Ambulatory.xaml
+++ b/Hospital.WPF/Views/Ambulatory.xaml
@@ -14,14 +14,14 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition MinWidth="230" MaxWidth="400" Width="0.2*"/>
+            <ColumnDefinition MinWidth="270" MaxWidth="400" Width="0.3*"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <ContentControl Grid.Column="0">
             <controls:AmbMenuPanel Background="{DynamicResource BrushPrimaryPanel}"
                                    BorderThickness="0,0,1,0" BorderBrush="{DynamicResource BrushPrimaryBorderLight}"/>
         </ContentControl>
-        <ContentControl Grid.Column="1"  Content="{Binding ElementName=AmbulatoryView, Path=Navigator.CurrentBody}"/>
+        <mah:TransitioningContentControl Grid.Column="1"  Content="{Binding ElementName=AmbulatoryView, Path=Navigator.CurrentBody}" Transition="Down"/>
         <GridSplitter Grid.Column="1" BorderThickness="2" BorderBrush="Transparent" HorizontalAlignment="Left"/>
     </Grid>
 </UserControl>
