--- a/Hospital.WPF/Resources/Dictionary.xaml
+++ b/Hospital.WPF/Resources/Dictionary.xaml
@@ -1,7 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:ser="clr-namespace:Hospital.WPF.Services"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls">
+
+    <!--path-->
+
+    <Geometry x:Key="treeIconLeft">M10,17L15,12L10,7V17Z</Geometry>
+    <Geometry x:Key="treeIconDown">M7,10L12,15L17,10H7Z</Geometry>
+
     
     <!--converters-->
 
@@ -12,7 +19,7 @@
     <ser:DateToAgeConverter x:Key="DateToAgeConverter"/>
 
     <!--expanders-->
-    
+
     <SolidColorBrush x:Key="Expander.Static.Arrow.Stroke" Color="#FF333333"/>
     <SolidColorBrush x:Key="Expander.MouseOver.Arrow.Stroke" Color="#FF000000"/>
     <SolidColorBrush x:Key="Expander.Pressed.Arrow.Stroke" Color="#FF000000"/>
@@ -61,9 +68,16 @@
         </Setter>
     </Style>
     <ControlTemplate x:Key="ExpanderTemplate" TargetType="{x:Type Expander}">
-        <Border Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" BorderBrush="{TemplateBinding BorderBrush}" SnapsToDevicePixels="true">
+        <Border Background="{TemplateBinding Background}"
+                BorderThickness="{TemplateBinding BorderThickness}"
+                BorderBrush="{TemplateBinding BorderBrush}"
+                SnapsToDevicePixels="true">
             <DockPanel>
-                <ToggleButton x:Name="HeaderSite" ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}" ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}" DockPanel.Dock="Top"
+                <ToggleButton x:Name="HeaderSite"
+                              ContentTemplate="{TemplateBinding HeaderTemplate}"
+                              Content="{TemplateBinding Header}"
+                              ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}"
+                              DockPanel.Dock="Top"
                               FontStyle="{TemplateBinding FontStyle}"
                               FontStretch="{TemplateBinding FontStretch}"
                               FontWeight="{TemplateBinding FontWeight}"
@@ -76,9 +90,13 @@
                               MinHeight="0" MinWidth="0" Margin="0" Padding="4"
                               Style="{StaticResource ExpanderDownHeaderStyleSch}"
                               VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Focusable="false"
+                <ContentPresenter x:Name="ExpandSite"
+                                  DockPanel.Dock="Bottom"
+                                  Focusable="false"
                                   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                  Margin="0" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Visibility="Collapsed">
+                                  Margin="0"
+                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  Visibility="Collapsed">
                     <ContentPresenter.LayoutTransform>
                         <ScaleTransform ScaleY="0"/>
                     </ContentPresenter.LayoutTransform>
@@ -211,13 +229,221 @@
         </ControlTemplate.Triggers>
     </ControlTemplate>
 
+    <Style x:Key="ExpanderDownHeaderStyleDiag" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Border Padding="{TemplateBinding Padding}"
+                            Background="{DynamicResource BrushBackgroundPaper}"
+                            BorderThickness="0,0,0,0"
+                            BorderBrush="{DynamicResource BrushPrimaryBorderLight}">
+                        <Grid SnapsToDevicePixels="False">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="20"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <ContentPresenter Grid.Column="1"
+                                              HorizontalAlignment="Stretch"
+                                              Margin="5,0"
+                                              RecognizesAccessKey="True"
+                                              SnapsToDevicePixels="True"
+                                              VerticalAlignment="Center"/>
+                            <Path Grid.Column="0" x:Name="arrow" Width="15" Height="15"
+                                  Data="{StaticResource treeIconLeft}"
+                                  Fill="{DynamicResource BrushAccentInvert}"
+                                  SnapsToDevicePixels="false"
+                                  Stretch="Uniform"
+                                  HorizontalAlignment="Center"
+                                  VerticalAlignment="Center"/>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="true">
+                            <Setter Property="Data" TargetName="arrow" Value="{StaticResource treeIconDown}"/>
+                            <Setter Property="Fill" TargetName="arrow" Value="{DynamicResource BrushAccent1}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Stroke" TargetName="arrow" Value="{StaticResource Expander.Disabled.Arrow.Stroke}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <ControlTemplate x:Key="ExpanderDiagTable" TargetType="{x:Type Expander}">
+        <Border x:Name="ExpBorder" Background="{TemplateBinding Background}" BorderBrush="{DynamicResource BrushPrimaryBorderLight}"
+                BorderThickness="0,0,0,1" SnapsToDevicePixels="true">
+            <DockPanel>
+                <ToggleButton x:Name="HeaderSite"
+                              ContentTemplate="{TemplateBinding HeaderTemplate}"
+                              Content="{TemplateBinding Header}"
+                              ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}"
+                              DockPanel.Dock="Top"
+                              FontStyle="{TemplateBinding FontStyle}"
+                              FontStretch="{TemplateBinding FontStretch}"
+                              FontWeight="SemiBold"
+                              FocusVisualStyle="{StaticResource ExpanderHeaderFocusVisual}"
+                              FontFamily="{TemplateBinding FontFamily}"
+                              Foreground="{DynamicResource BrushForegroundLight}"
+                              FontSize="14"
+                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                              IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                              MinHeight="0" MinWidth="0" Margin="0" Padding="6"
+                              Style="{StaticResource ExpanderDownHeaderStyleDiag}"
+                              VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Focusable="false"
+                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                  Margin="0"
+                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  Visibility="Collapsed">
+                    <ContentPresenter.LayoutTransform>
+                        <ScaleTransform ScaleY="0"/>
+                    </ContentPresenter.LayoutTransform>
+                </ContentPresenter>
+            </DockPanel>
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsExpanded" Value="true">
+                <Setter TargetName="ExpBorder" Property="BorderThickness" Value="0"/>
+                <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible"/>
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="ExpandSite"
+                             Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                             To="1"
+                             Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="ExpandSite"
+                             Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                             To="0"
+                             Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.ExitActions>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+    <Style x:Key="ExpanderDownHeaderStyleLab" TargetType="{x:Type ToggleButton}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                    <Border Padding="{TemplateBinding Padding}"
+                            Background="{DynamicResource BrushBackgroundPaper}"
+                            BorderThickness="0,0,0,1"
+                            BorderBrush="{DynamicResource BrushPrimaryBorderLight}">
+                        <Grid SnapsToDevicePixels="False">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <ContentPresenter Grid.Column="1"
+                                              HorizontalAlignment="Stretch"
+                                              Margin="5,0"
+                                              RecognizesAccessKey="True"
+                                              SnapsToDevicePixels="True"
+                                              VerticalAlignment="Center"/>
+                            <Path Grid.Column="0" x:Name="arrow" Width="15" Height="15"
+                                  Data="{StaticResource treeIconLeft}"
+                                  Fill="{DynamicResource BrushAccentInvert}"
+                                  SnapsToDevicePixels="false"
+                                  Stretch="Uniform"
+                                  HorizontalAlignment="Left" Margin="20,0,0,0"
+                                  VerticalAlignment="Center"/>
+                        </Grid>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsChecked" Value="true">
+                            <Setter Property="Data" TargetName="arrow" Value="{StaticResource treeIconDown}"/>
+                            <Setter Property="Fill" TargetName="arrow" Value="{DynamicResource BrushAccent1}"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Stroke" TargetName="arrow" Value="{StaticResource Expander.Disabled.Arrow.Stroke}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <ControlTemplate x:Key="ExpanderDiagLabTable" TargetType="{x:Type Expander}">
+        <Border x:Name="ExpBorder" Background="{TemplateBinding Background}"
+                BorderThickness="0" SnapsToDevicePixels="true">
+            <DockPanel>
+                <ToggleButton x:Name="HeaderSite"
+                              ContentTemplate="{TemplateBinding HeaderTemplate}"
+                              Content="{TemplateBinding Header}"
+                              ContentTemplateSelector="{TemplateBinding HeaderTemplateSelector}"
+                              DockPanel.Dock="Top"
+                              FontStyle="{TemplateBinding FontStyle}"
+                              FontStretch="{TemplateBinding FontStretch}"
+                              FontWeight="SemiBold"
+                              FocusVisualStyle="{StaticResource ExpanderHeaderFocusVisual}"
+                              FontFamily="{TemplateBinding FontFamily}"
+                              Foreground="{TemplateBinding Foreground}"
+                              FontSize="{TemplateBinding FontSize}"
+                              HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                              IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
+                              MinHeight="0" MinWidth="0" Margin="0" Padding="6"
+                              Style="{StaticResource ExpanderDownHeaderStyleLab}"
+                              VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Focusable="false"
+                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                  Margin="0"
+                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                  Visibility="Collapsed">
+                    <ContentPresenter.LayoutTransform>
+                        <ScaleTransform ScaleY="0"/>
+                    </ContentPresenter.LayoutTransform>
+                </ContentPresenter>
+            </DockPanel>
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsExpanded" Value="true">
+                <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible"/>
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="ExpandSite"
+                             Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                             To="1"
+                             Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="ExpandSite"
+                             Storyboard.TargetProperty="(ContentPresenter.LayoutTransform).(ScaleTransform.ScaleY)"
+                             To="0"
+                             Duration="0:0:0.2"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.ExitActions>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+
+
     <!--listBoxItem-->
-        
+
     <SolidColorBrush x:Key="Item.MouseOver.Background" Color="#1F26A0DA"/>
     <SolidColorBrush x:Key="Item.MouseOver.Border" Color="#a826A0Da"/>
     <SolidColorBrush x:Key="Item.IsSelected.Background" Color="{DynamicResource ColorBackgroundPaper}"/>
     <SolidColorBrush x:Key="Item.IsSelected.Border" Color="#FF26A0DA"/>
-    
+
     <ControlTemplate x:Key="ListBoxItemAmbMenu" TargetType="{x:Type ListBoxItem}">
         <Border x:Name="Bd"
                 Background="{TemplateBinding Background}"
@@ -235,7 +461,7 @@
                 <MultiTrigger.Conditions>
                     <Condition Property="IsMouseOver" Value="True"/>
                     <Condition Property="IsSelected" Value="False"/>
-                </MultiTrigger.Conditions>    
+                </MultiTrigger.Conditions>
                 <Setter Property="Cursor" Value="Hand"/>
             </MultiTrigger>
             <Trigger Property="IsMouseOver" Value="True">
@@ -251,9 +477,9 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
-    
+
     <!--others-->
-    
+
     <Style TargetType="ListBoxItem" x:Key="TitleListBoxItem">
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Padding" Value="10,5"/>
@@ -343,7 +569,7 @@
                                         Width="{TemplateBinding Width}" 
                                         Height="{TemplateBinding Height}"/>
                         </Grid>
-                 
+
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -412,7 +638,7 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    
+
     <Style x:Key="TableCell" TargetType="{x:Type DataGridCell}">
         <Setter Property="Template">
             <Setter.Value>
