--- a/Hospital.WPF/Views/Ambulatory.xaml
+++ b/Hospital.WPF/Views/Ambulatory.xaml
@@ -21,7 +21,7 @@
             <controls:AmbMenuPanel Background="{DynamicResource BrushPrimaryPanel}"
                                    BorderThickness="0,0,1,0" BorderBrush="{DynamicResource BrushPrimaryBorderLight}"/>
         </ContentControl>
-        <mah:TransitioningContentControl Grid.Column="1"  Content="{Binding ElementName=AmbulatoryView, Path=Navigator.CurrentBody}" Transition="Down"/>
+        <mah:TransitioningContentControl Grid.Column="1"  Content="{Binding ElementName=AmbulatoryView, Path=Navigator.CurrentBody}" Transition="Default"/>
         <GridSplitter Grid.Column="1" BorderThickness="2" BorderBrush="Transparent" HorizontalAlignment="Left"/>
     </Grid>
 </UserControl>
