--- a/Hospital.WPF/Resources/Dictionary.xaml
+++ b/Hospital.WPF/Resources/Dictionary.xaml
@@ -237,14 +237,14 @@
                             Background="{DynamicResource BrushBackgroundPaper}"
                             BorderThickness="0,0,0,1"
                             BorderBrush="{DynamicResource BrushPrimaryBorderLight}">
-                        <Grid SnapsToDevicePixels="False">
+                        <Grid SnapsToDevicePixels="False" Height="35">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="20"/>
+                                <ColumnDefinition Width="35"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
                             <ContentPresenter Grid.Column="1"
                                               HorizontalAlignment="Stretch"
-                                              Margin="5,0"
+                                              Margin="0"
                                               RecognizesAccessKey="True"
                                               SnapsToDevicePixels="True"
                                               VerticalAlignment="Center"/>
@@ -259,10 +259,9 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="true">
+                            <Setter TargetName="b_ExpanderMethod" Property="BorderThickness" Value="0"/>
                             <Setter Property="Data" TargetName="arrow" Value="{StaticResource treeIconDown}"/>
                             <Setter Property="Fill" TargetName="arrow" Value="{DynamicResource BrushAccent1}"/>
-                            <Setter TargetName="b_ExpanderMethod" Property="BorderThickness" Value="0,0,0,2"/>
-                            <Setter TargetName="b_ExpanderMethod" Property="BorderBrush" Value="{DynamicResource BrushAccent1}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Stroke" TargetName="arrow" Value="{StaticResource Expander.Disabled.Arrow.Stroke}"/>
@@ -290,7 +289,7 @@
                               FontSize="14"
                               HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
                               IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}"
-                              MinHeight="0" MinWidth="0" Margin="0" Padding="6"
+                              MinHeight="0" MinWidth="0" Margin="0" Padding="0"
                               Style="{StaticResource ExpanderDownHeaderStyleDiag}"
                               VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
                 <ContentPresenter x:Name="ExpandSite" DockPanel.Dock="Bottom" Focusable="false"
@@ -339,7 +338,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
-                    <Border Padding="{TemplateBinding Padding}"
+                    <Border Padding="{TemplateBinding Padding}" x:Name="br_labexp"
                             Background="{DynamicResource BrushBackgroundPaper}"
                             BorderThickness="0,0,0,1"
                             BorderBrush="{DynamicResource BrushPrimaryBorderLight}">
@@ -365,6 +364,7 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsChecked" Value="true">
+                            <!--<Setter Property="BorderThickness" TargetName="br_labexp" Value="0"/>-->
                             <Setter Property="Data" TargetName="arrow" Value="{StaticResource treeIconDown}"/>
                             <Setter Property="Fill" TargetName="arrow" Value="{DynamicResource BrushAccent1}"/>
                         </Trigger>
@@ -688,10 +688,11 @@
                 <Style TargetType="{x:Type DataGridColumnHeader}">
                     <Setter Property="HorizontalContentAlignment" Value="Center"/>
                     <Setter Property="Height" Value="35"/>
+                    <Setter Property="Width" Value="Auto"/>
                     <Setter Property="BorderThickness" Value="0"/>
-                    <Setter Property="Padding" Value="10,0"/>
+                    <Setter Property="Padding" Value="5,0"/>
                     <Setter Property="FontSize" Value="12"/>
-                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="FontWeight" Value="SemiBold"/>
                     <Setter Property="Foreground" Value="{DynamicResource  BrushForegroundLight}"/>
                     <Setter Property="Background" Value="{DynamicResource BrushTableHeader}"/>
                 </Style>
